fix retry and rpc error handler